; ModuleID = '/home/carl/AnghaBench/esp-idf/components/console/extr_commands.c_esp_console_run.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/console/extr_commands.c_esp_console_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_4__ = type { i32 (i64, i8**)* }

@s_tmp_line_buf = common dso_local global i32* null, align 8
@ESP_ERR_INVALID_STATE = common dso_local global i32 0, align 4
@s_config = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@ESP_ERR_NO_MEM = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@ESP_ERR_NOT_FOUND = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_console_run(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load i32*, i32** @s_tmp_line_buf, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @ESP_ERR_INVALID_STATE, align 4
  store i32 %12, i32* %3, align 4
  br label %58

13:                                               ; preds = %2
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @s_config, i32 0, i32 0), align 4
  %15 = call i64 @calloc(i32 %14, i32 8)
  %16 = inttoptr i64 %15 to i8**
  store i8** %16, i8*** %6, align 8
  %17 = load i8**, i8*** %6, align 8
  %18 = icmp eq i8** %17, null
  br i1 %18, label %19, label %21

19:                                               ; preds = %13
  %20 = load i32, i32* @ESP_ERR_NO_MEM, align 4
  store i32 %20, i32* %3, align 4
  br label %58

21:                                               ; preds = %13
  %22 = load i32*, i32** @s_tmp_line_buf, align 8
  %23 = load i8*, i8** %4, align 8
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @s_config, i32 0, i32 1), align 4
  %25 = call i32 @strlcpy(i32* %22, i8* %23, i32 %24)
  %26 = load i32*, i32** @s_tmp_line_buf, align 8
  %27 = load i8**, i8*** %6, align 8
  %28 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @s_config, i32 0, i32 0), align 4
  %29 = call i64 @esp_console_split_argv(i32* %26, i8** %27, i32 %28)
  store i64 %29, i64* %7, align 8
  %30 = load i64, i64* %7, align 8
  %31 = icmp eq i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %21
  %33 = load i8**, i8*** %6, align 8
  %34 = call i32 @free(i8** %33)
  %35 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %35, i32* %3, align 4
  br label %58

36:                                               ; preds = %21
  %37 = load i8**, i8*** %6, align 8
  %38 = getelementptr inbounds i8*, i8** %37, i64 0
  %39 = load i8*, i8** %38, align 8
  %40 = call %struct.TYPE_4__* @find_command_by_name(i8* %39)
  store %struct.TYPE_4__* %40, %struct.TYPE_4__** %8, align 8
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %42 = icmp eq %struct.TYPE_4__* %41, null
  br i1 %42, label %43, label %47

43:                                               ; preds = %36
  %44 = load i8**, i8*** %6, align 8
  %45 = call i32 @free(i8** %44)
  %46 = load i32, i32* @ESP_ERR_NOT_FOUND, align 4
  store i32 %46, i32* %3, align 4
  br label %58

47:                                               ; preds = %36
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 0
  %50 = load i32 (i64, i8**)*, i32 (i64, i8**)** %49, align 8
  %51 = load i64, i64* %7, align 8
  %52 = load i8**, i8*** %6, align 8
  %53 = call i32 %50(i64 %51, i8** %52)
  %54 = load i32*, i32** %5, align 8
  store i32 %53, i32* %54, align 4
  %55 = load i8**, i8*** %6, align 8
  %56 = call i32 @free(i8** %55)
  %57 = load i32, i32* @ESP_OK, align 4
  store i32 %57, i32* %3, align 4
  br label %58

58:                                               ; preds = %47, %43, %32, %19, %11
  %59 = load i32, i32* %3, align 4
  ret i32 %59
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @strlcpy(i32*, i8*, i32) #1

declare dso_local i64 @esp_console_split_argv(i32*, i8**, i32) #1

declare dso_local i32 @free(i8**) #1

declare dso_local %struct.TYPE_4__* @find_command_by_name(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
